--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <base url="https://roviks.github.io/exterior" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./logo192.png" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Exterior Designer Portfolio</title>
-    <link href="./static/css/2.0ebe65e3.chunk.css" rel="stylesheet" />
-    <link href="./static/css/main.69a27a59.chunk.css" rel="stylesheet" />
+    <link href="/static/css/2.0ebe65e3.chunk.css" rel="stylesheet" />
+    <link href="/static/css/main.69a27a59.chunk.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -108,7 +109,7 @@
         t();
       })([]);
     </script>
-    <script src="./static/js/2.5c7bcd66.chunk.js"></script>
-    <script src="./static/js/main.bce89aac.chunk.js"></script>
+    <script src="/static/js/2.5c7bcd66.chunk.js"></script>
+    <script src="/static/js/main.bce89aac.chunk.js"></script>
   </body>
 </html>
